Support inheritance in variable components